--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     />
   </head>
   <body onload="initialize()">
-   <div id="head">  <h1>Tic-Tac-Toe</h1> <a href="index1.html" style="font-size: 24px ;"> Go with 2 Player</a> </div>
+   <div id="head"> <img src="img/sk.png" alt="logo" style="border-radius: 50%; width: 80px; height:80px;">
+    <h1>Tic-Tac-Toe</h1> <a href="index1.html" style="font-size: 24px ;"> Go with 2 Player</a> </div>
     <table id="table_game">
       <tr>
         <td class="td_game">
