--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="head">  <h1>Tic-Tac-Toe</h1> <a href="index.html"> Go with Computer</a> </div>
+    <div id="head"> <h1> Made by Bihari </h1> <h1>O X</h1> <a href="index.html"> Go with Computer</a> </div>
    <div class="wrapper">
        <div class="container">
            <button class="button-option"></button>
